--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="top-banner">
         <div class="container">
-            <h1 class="heading">Simple Weather App</h1>
+            <h1 class="heading">Weather App</h1>
             <form>
                 <input type="text" placeholder="Search for a city" autofocus>
                 <button type="submit">SUBMIT</button>
@@ -23,7 +23,6 @@
             <ul class="cities"></ul>
         </div>
     </section>
-    </footer>
     <script type="text/javascript" src="index.js"></script>
 </body>
 
